[tool.poetry]
name = "api-react-backend-rb"
version = "0.1.0"
description = "ghostpost backend"
authors = ["Michael DeMory <mjdemory2891@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
djangorestframework = "^3.12.1"
ipdb = "^0.13.3"
django-cors-headers = "^3.5.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
